--- a/Customer Management System(CMS)/pom.xml
+++ b/Customer Management System(CMS)/pom.xml
@@ -33,5 +33,11 @@
             <version>6.2.3.Final</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     </project>
